css/style.css
body{
    /*//margin-top:50px;*/
}

header .branding {
    display:block;
    width:100%;
    background:white;
// max-width:960px;
    margin:0 auto;
}


#banner{
    color:white;
    background: url(http://hariborn.crunchkode.com/img/section-banner.jpg) fixed no-repeat center;
    background-size: cover;
    height: 300px;

}

#banner p.tagline {
    margin-top: 40px;
    text-align: center;
}

#banner-body{
    margin-top: -200px;

}



#banner-body .container .col-md-12 .container{
    border: 4px solid white;
    background-color: black;
    box-shadow: 2px 2px 2px grey;
}

#banner-body .left-content h4{
    padding-top:25px;
}

#banner-body .left-content p{
    color:grey;
}

#banner-body .left-content a:hover, a:focus  {
    text-decoration:none;
    color:white;

}



#banner-body .right-content{
    background-color:black;
}
#banner-body .right-content img{
    margin: auto;
    margin-left: -16px;
    margin-right: 20px;
    width:100%;
    height: 250px;

}

#banner-body .left-content{
    color:white;
    background-color:black;
    height: 250px;
}

nav{
    /*width:100%;
    background:blue;*/
}

.feature-site{
    max-width: 50%;
    height: 250px;
}

.feature h4 , .feature p{
    text-align: center;
}
.feature-glypicon{
    font-size:75px;
}

.feature-bg{
    color:white;
    background: url(http://hariborn.crunchkode.com/img/section-banner.jpg) fixed no-repeat center;
    background-size: cover;
    height: 300px;
}

.feature-content{
    margin-top:40px;
}
.feature .description{
    font-size:12px;
    text-align: center;
    color: grey;
}

